adding button to show/hide starwars movies

--- a/src/App.css
+++ b/src/App.css
@@ -47,7 +47,7 @@ img {
     max-width: 200px;
     height: 1px;
     background-color: #dcd;
-    margin: 0px auto 20px;
+    margin: 20px auto;
 }
 
 strong {
